# Call-Me-Maybe

./: .gitignore  Makefile  README.md  en.subject_call_maybe.md  pyproject.toml  src_verification_report.md  test.py
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
source/: models.py  utils.py
src/: __main__.py  decoder.py  models.py  utils.py
