[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Constrained decoding function-calling tool using Qwen3-0.6B"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "flake8>=7.0",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
